Update CSS styles and fix overflow issue

--- a/src/PushPrintComponents.css
+++ b/src/PushPrintComponents.css
@@ -51,6 +51,7 @@
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 2fr 2fr;
     grid-gap: 5px;
+    overflow: hidden;
 }
 
 .preview .view .previewscreen {
